--- a/style.css
+++ b/style.css
@@ -10,37 +10,28 @@ body {
   background-color: #000;
   padding: 30px 100px;
   height: 110vh;
-  width: 100%;
 }
 
 header {
-margin-right: 19px;
+  margin-right: 10px;
+}
+
+.site-title {
+  position: absolute;
+  bottom: 50px
+  right: 50px;
+  list-style: none;
+  font: 0.7rem caption;
 }
 
 .site-title img {
   position: absolute;
   bottom: 0;
   left: 150px;
-  text-align: left;
 }
 
-.site-title h1 {
-  position: absolute;
-  bottom: 340px;
-  right: 200px;
-  font-size: 1.2rem;
-  line-height: 1.2;
-  text-align: right;
-  font: 2rem caption;
-}
-
-.site-title p {
-  padding-top: 10px;
-  font: 0.7rem caption;
-  position: absolute;
-  bottom: 330px;
-  right: 217px;
-  opacity: 0.3;
+.title-text {
+  z-index: 10px
 }
 
 .headings {
@@ -92,7 +83,6 @@ margin-right: 19px;
   float: right;
   font-size: 25px;
   padding: 21px 0;
-  display: none;
 }
 
 /* スマートフォン向けレイアウト */
@@ -102,7 +92,19 @@ margin-right: 19px;
   box-sizing: border-box;
 }
 
-.header {
+body {
+  text-align: center;
+  font: 0.6rem caption;
+}
+
+.site-title img {
+  position: relative;
+  width: 420;
+  height: 540;
+  text-align: left;
+}
+
+header {
   position: relative;
   text-align: left;
   background-color: #000;
@@ -110,13 +112,7 @@ margin-right: 19px;
 }
 
 .site-title {
-  float: left;
-}
-
-.site-title img {
-  position: absolute;
-  top: 50px;
-  left: 15px;
+  text-align: left;
 }
 
 .abouts {
@@ -130,10 +126,6 @@ margin-right: 19px;
 .site-text {
   font-size: 3rem;
 }
-
-header {
-  display: none;
-  }
 
 .menu-icon {
   display: block;
@@ -157,3 +149,4 @@ color:#55acee;
 .flowbtn10 .fa-instagram:hover{
 color:#c6529a;
 }
+
