--- a/style.css
+++ b/style.css
@@ -17,26 +17,54 @@ header {
 }
 
 .site-title {
-  position: absolute;
-  bottom: 50px
-  right: 50px;
-  list-style: none;
-  font: 0.7rem caption;
+  position: relative;
+  margin: 20px 10px;
 }
 
-.site-title img {
+.intro {
+  margin-top: 300px;
+  font-family: serif;
+  float: right;
   position: absolute;
-  bottom: 0;
-  left: 150px;
+  bottom: 100px;
+  left: 310px;
+}
+
+.site-pic {
+
+}
+
+.skills {
+  margin-bottom: 20px;
+  opacity: 0.5;
+}
+
+.froms {
+  line-height: 30px;
+}
+
+.from {
+  margin-top: 30px;
 }
 
 .title-text {
-  z-index: 10px
+  margin-top: 20px;
+  padding-top: 20px
 }
 
-.headings {
-  text-align: right;
-  margin: 15px 35px;
+.title-text li {
+  list-style: none;
+}
+
+.title-text h1 {
+  margin-bottom: 3px;
+  font-size: 2rem;
+  font-family: serif;
+}
+
+.inner li {
+  display: inline-block;
+  list-style: none;
 }
 
 .button {
@@ -59,32 +87,6 @@ header {
   opacity: 0.6;
 }
 
-
-.abouts {
-  line-height: 2;
-   padding-top: 10px;
-  font: 0.7rem caption;
-  position: absolute;
-  bottom: 210px;
-  right: 336px;
-  line-height: 3;
-}
-
-.about {
-  padding-top: 10px;
-  font: 0.7rem caption;
-  position: absolute;
-  bottom: 130px;
-  right: 155px;
-}
-
-.menu-icon {
-  color: white;
-  float: right;
-  font-size: 25px;
-  padding: 21px 0;
-}
-
 /* スマートフォン向けレイアウト */
 @media screen and (max-width: 670px) {
 
@@ -93,11 +95,10 @@ header {
 }
 
 body {
-  text-align: center;
   font: 0.6rem caption;
 }
 
-.site-title img {
+..site-titles {
   position: relative;
   width: 420;
   height: 540;
@@ -106,7 +107,6 @@ body {
 
 header {
   position: relative;
-  text-align: left;
   background-color: #000;
   width: 100%;
 }
@@ -115,38 +115,11 @@ header {
   text-align: left;
 }
 
-.abouts {
-  text-align: center;
-}
-
-.about {
-  text-align: center;
-}
-
 .site-text {
   font-size: 3rem;
 }
 
-.menu-icon {
-  display: block;
-  }
-
-}
-
-/* ボタン全体 */
-.flowbtn10{
-display:inline-block; 
-font-size:35px;
-text-decoration:none;
-transition:.5s;
-color:#444; 
-}
-/* Twitterマウスホバー時 */
-.flowbtn10 .fa-twitter:hover{
-color:#55acee;
-}
-/* Instagramマウスホバー時 */
-.flowbtn10 .fa-instagram:hover{
-color:#c6529a;
+.button {
+  display: none;
 }
 
