--- a/style.css
+++ b/style.css
@@ -16,9 +16,18 @@ header {
   margin-right: 10px;
 }
 
+.menu-icon {
+  color: white;
+  float: right;
+  font-size: 25px;
+  padding: 21px 0;
+  display: none;
+}
+
 .site-title {
   position: relative;
   margin: 20px 10px;
+  max-width: 1170px
 }
 
 .intro {
@@ -72,6 +81,7 @@ header {
   margin-right: -25px;
 }
 
+
 .button a {
   cursor: pointer;
   text-decoration: none;
@@ -98,6 +108,13 @@ body {
   font: 0.6rem caption;
   margin-left: 0;
   padding-left: 0;
+  width: 100%;
+  height: 100%;
+  min-width: 460px;
+}
+
+.menu-icon {
+
 }
 
 .intro {
@@ -108,10 +125,6 @@ header {
   position: relative;
   background-color: #000;
   width: 100%;
-}
-
-.site-title {
-  text-align: left;
 }
 
 .site-text {
