--- a/3D_Modeling.css
+++ b/3D_Modeling.css
@@ -8,21 +8,16 @@ body {
   text-align: center;
   font-size: 0.7rem;
   background-color: #F8F8FF;
+  max-width: 100%;
+}
+
+.lesson {
+  margin-top: 50px;
 }
 
 
 
-.heading {
-  margin: 15px 362px;
-  float: left;
-  font-size: 0.8rem;
-}
-
-.pd-pic {
-width: 100%;
-height: 250vh;
-margin: auto 0;
-border-bottom: 4px #999;
+.pd-works {
 }
 
 .pd-works img {
@@ -31,15 +26,19 @@ border-bottom: 4px #999;
   margin: 0 auto;
 }
 
-.pd-works p {
-  margin: 5px 362px;
+.pd-works ul {
+  position: relative;
+  padding-left: 0;
+}
+
+.pd-works li {
   margin-bottom: 100px;
-  text-align: right;
+  list-style: none;
 }
 
 .headings {
   text-align: right;
-  margin: 15px 50px;
+  margin: 15px 35px;
 }
 
 
@@ -61,48 +60,13 @@ border-bottom: 4px #999;
   color: #808080;
 }
 
+@media(max-width: 670px) {
+  .pd-works p {
+    text-align: right;
+}
 
-#page_top{
-  width: 90px;
-  height: 90px;
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  opacity: 0.6;
-}
-#page_top a{
-  position: relative;
-  display: block;
-  width: 90px;
-  height: 90px;
-  text-decoration: none;
-}
-#page_top a::before{
-  font-family: 'Font Awesome 5 Free';
-  font-weight: 900;
-  content: '\f102';
-  font-size: 25px;
-  color: #3f98ef;
-  position: absolute;
-  width: 25px;
-  height: 25px;
-  top: -40px;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  margin: auto;
-  text-align: center;
-}
-#page_top a::after{
-  content: 'PAGE TOP';
-  font-size: 13px;
-  color: #fff;
-  position: absolute;
-  top: 45px;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  margin: auto;
-  text-align: center;
-  color: #3f98ef;
+.heading {
+  margin: 15px 362px;
+  float: left;
+  font-size: 0.8rem;
 }
