--- a/3D_Modeling.css
+++ b/3D_Modeling.css
@@ -1,72 +1,193 @@
-* {
-  box-sizing: border-box;
+@charset "utf8";
+
+/* 単なるレイアウト:スクリーンモーダルとはあまり関係がない*/
+body{
+  max-width:950px;
+  margin:50px auto;
+  color:#F5F5F5;
+  font-size: 0.8rem;
 }
 
-body {
-  color: #808080;
-  font-family: serif;
-  text-align: center;
-  font-size: 0.7rem;
-  background-color: #F8F8FF;
-  max-width: 100%;
-}
-
-.lesson {
-  margin-top: 50px;
-}
-
-
-
-.pd-works {
-}
-
-.pd-works img {
-  margin-bottom: 15px;
-  display: block;
+header {
+  width: 984px;
+  height: 20px;
   margin: 0 auto;
 }
 
-.pd-works ul {
-  position: relative;
-  padding-left: 0;
-}
-
-.pd-works li {
-  margin-bottom: 100px;
+.inner li {
+  display: inline-block;
   list-style: none;
-}
-
-.headings {
-  text-align: right;
-  margin: 15px 35px;
-}
-
-
-.button {
   text-align: right;
   text-decoration: none;
-  margin: 10px;
-  padding-left: 15px;
-  letter-spacing: 0.5px;
-  font-size: 0.7rem;
-  color: #808080;
 }
 
-.button:hover {
+.button {
+  float: right;
+  margin-right: -25px;
+}
+
+
+.button a {
+  cursor: pointer;
+  text-decoration: none;
+  line-height: 65px;
+  padding: 0 25px;
+  color: black;
+  display: block;
+  float: left;
+  transition: all 0.5s;
+}
+
+.button a:hover {
   opacity: 0.6;
 }
 
-.button-gray {
-  color: #808080;
+.button:visited {
+  color: gray;
 }
 
-@media(max-width: 670px) {
-  .pd-works p {
+
+.wrapper {
+  display:flex;
+  margin-top: 100px;
+}
+
+.wrapper > div{
+    width:50%;
+}
+
+.screen-modal-data__image{
+  width: 80%;
+  box-shadow: 0 4px 3px 0 rgba(0, 0, 0, .5);
+  
+}
+
+.screen-modal-data__body {
+  display:none;
+}
+
+.screen-modal-data__body > ul {
+  
+}
+
+
+/* 
+スクロールバーは非表示にする 
+スクロールバーがあるとモーダルスクリーン表示時の背景スクロールを禁止するCSSを入れると、
+スクロールバーが消えるときに15px程のずれが発生する。
+見本のサイトがスクロールバーを消して、左下にその代わりのスクロールバーがあったのはそのせい。
+
+Prevent Page Scrolling When a Modal is Open
+https://css-tricks.com/prevent-page-scrolling-when-a-modal-is-open/
+
+[CSS] スクロールバーを非表示にする（IE, Edge, Chrome, Safari, Firefoxに対応）
+https://www.yoheim.net/blog.php?q=20190801
+*/
+body {
+  -ms-overflow-style: none;    /* IE, Edge 対応 */
+  scrollbar-width: none;       /* Firefox 対応 */
+}
+body::-webkit-scrollbar {  /* Chrome, Safari 対応 */
+  display:none;
+}
+
+/* モーダルオープン時は背景はスクロール禁止にする。 */
+body.screen-modal_open {
+  overflow: hidden;
+}
+
+/* スクリーンモーダルは一つのみ:通常非表示 */
+#screen-modal{
+  display:none;
+}
+
+/* オープン状態のモーダルスクリーン */
+.screen-modal_open #screen-modal{
+  display:block;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+}
+
+/* モーダルスクリーン上の画像:アニメーション前 */
+.screen-modal__image{
+  transition: 0.6s;
+  position:absolute;  
+  margin:0px;
+  top: 0px;
+  left: 0px;
+  width: 100%; 
+  height: 100%;
+  z-index: 9999;
+  object-fit: contain; 
+}
+
+/* モーダルスクリーン上の画像：アニメーション後 */
+.screen-modal_animated .screen-modal__image{
+  transition: 0.6s;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  width: 50%;
+  height: 100%;
+  border-radius: 0%; 
+}
+
+/* モーダルスクリーンの背景：アニメーション前 */
+.screen-modal__fade{
+  transition: 0.6s;
+  position:absolute;  
+  margin:0px;
+  top: 0px;
+  left: 0px;
+  right:0px;
+  bottom:0px;
+  width: 100%; 
+  height: 100%;
+  opacity: 0;
+  z-index: 9998;
+  background-color:white;  
+}
+
+/* モーダルスクリーンの背景：アニメーション後 */
+.screen-modal_animated .screen-modal__fade {
+  transition: 0.6s;
+  opacity: 1;
+}
+
+/* スマートフォン向けレイアウト */
+@media screen and (max-width: 576px) {
+
+  * {
+    box-sizing: border-box;
+  }
+  
+  body {
+    font: 0.6rem caption;
+    margin-left: 0;
+    padding-left: 0;
+    width: 350px;
+    min-width: 460px;
+  }
+  
+  .site-title {
+    margin-top: 30px;
+    width: 100%;
+  }
+  
+  .inner {
     text-align: right;
-}
-
-.heading {
-  margin: 15px 362px;
-  float: left;
-  font-size: 0.8rem;
+  }
+  
+  .intro {
+    width: 100%;
+    padding-left: 0;
+    position: absolute;
+    bottom: 0;
+    left: 320px;
+  }
+  
+  
 }
