--- a/3D_Modeling.css
+++ b/3D_Modeling.css
@@ -165,7 +165,7 @@ body.screen-modal_open {
   }
   
   body {
-    font: 0.6rem caption;
+    color: black;
     margin-left: 0;
     padding-left: 0;
     width: 350px;
@@ -189,5 +189,31 @@ body.screen-modal_open {
     left: 320px;
   }
   
+  /* モーダルスクリーン上の画像：アニメーション後 */
+.screen-modal_animated .screen-modal__image{
+  width: 100%;
+  height: 30%;
+  border-radius: 0%; 
+}
+  
+  /* モーダルスクリーン上の画像:アニメーション前 */
+.screen-modal__image{
+  position:absolute;  
+  margin:0px;
+  top: 0px;
+  left: 0px;
+  width: 100%; 
+  height: 100%;
+  z-index: 9999;
+  object-fit: scale-down;
+}
+
+.modal__text {
+  margin-top: 270px;
+}
+
+.modal__text li {
+  list-style: none;
+}
   
 }
